<resources>
    <string name="app_name">Zorg voor het hart</string>
    <string name="startButton">Start nieuwe meting</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_measurement">Meting</string>
    <string name="title_diary">Dagboek</string>
    <string name="title_contact">Contact</string>
    <string name="title_settings">Service</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Uw emailadres is ongeldig</string>
    <string name="error_invalid_password">Uw wachtwoord is te kort</string>
    <string name="error_incorrect_password">Uw wachtwoord is onjuist</string>
    <string name="error_field_required">verplicht veld</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_stepper">StepperActivity</string>
    <string name="registered">
       \n U heeft een email ontvangen op:
          \n\n
        Klik op de link in de email om uw \naccount activeren.
    </string>

    <!-- Strings related to Service -->
    <string name="settingsLbl">Mijn instellingen</string>
    <string name="accountLbl">Mijn account</string>
    <string name="disclaimerLbl">Disclaimer</string>
    <string name="disclaimerText">
        Deze app is met de grootst mogelijke zorgvuldigheid samengesteld. Wij kunnen \n\n
        echter niet garanderen dat de app altijd zonder onderbreking, fouten of gebreken beschikbaar zal zijn\n\n
        of werken en dat de verschafte informatie volledig, juist of up-to-date is.
    </string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="tab_title" />
    <string name="go_to_summary" />

    <!-- Measurement -->
    <string name="fillInText">1. Vul uw bloeddruk in (mmHg)</string>
    <string name="fillInText2">2. Gezondheidsklachten</string>
    <string name="none">geen</string>
    <string name="yesNamely">Ja, namelijk</string>
    <string name="shortOfBreath">Kortademigheid</string>
    <string name="wheezing">Piep op de borst</string>
    <string name="hardToBreathe">Benauwdheid</string>
    <string name="heartPounding">Hartkloppingen</string>
    <string name="irregularHeartbeat">Onregelmatige hartslag</string>
    <string name="heartSkipping">Overslaan van het hart</string>
    <string name="otherNamely">Anders, namelijk:</string>
    <string name="extraRemarks">Extra / opmerkingen</string>
</resources>
